Remove option that is unsupported on JDK 17